fixes: alignment, sizing, responsiveness

--- a/styles/Footer.module.scss
+++ b/styles/Footer.module.scss
@@ -10,7 +10,6 @@
     font-weight: 800;
     font-size: 1.5rem;
     color: #71788B;
-    margin-top: 8rem;
     > div > a {
         transition: 200ms;
         display: flex;
